--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
+# Node modules
+node_modules/
+
+# Build outputs
 *.vsix
+
+# VS Code settings and workspace files
+.vscode/
+
+# Logs
+*.log
+
+# Operating system files
+.DS_Store
+Thumbs.db
+
+# Affinity Designer lock files
+*.afdesign~lock~
